use integer _id. improve the mongoconnection tools